--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,12 +1,45 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "cppbuild",
-			"label": "C/C++: clang++ build active file",
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "type": "cppbuild",
+            "label": "C/C++: Linux build active file",
 			"command": "/usr/bin/clang++",
 			"args": [
-				"-std=c++17",
+				"-std=c++20",
+				"-fcolor-diagnostics",
+				"-Wall",
+				"-g",
+				"-I${workspaceFolder}/dependencies/include",
+				"-L${workspaceFolder}/dependencies/library",
+				"${workspaceFolder}/*.cpp",
+				"-lglfw",
+				"-lGL",
+				"-lX11",
+				"-lXrandr",
+				"-lXi",
+				"-ldl",
+				"-lpthread",
+				"-o",
+				"${workspaceFolder}/app",
+				"-Wno-deprecated"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": ["$gcc"],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: /usr/bin/clang++"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: macOS build active file",
+			"command": "/usr/bin/clang++",
+			"args": [
+				"-std=c++20",
 				"-fcolor-diagnostics",
 				"-Wall",
 				"-fansi-escape-codes",
@@ -38,6 +71,6 @@
 				"isDefault": true
 			},
 			"detail": "compiler: /usr/bin/clang++"
-		}
-	]
+        }
+    ]
 }
