--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
 				"-I${workspaceFolder}/dependencies/include",
 				"-L${workspaceFolder}/dependencies/library",
 				"${workspaceFolder}/*.cpp",
+				"${workspaceFolder}/glad.c",
 				"-lglfw",
 				"-lGL",
 				"-lX11",
